--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "module": "^1.2.5",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
+    "vue-multiselect": "^2.1.7",
     "vue-server-renderer": "^2.7.10",
     "vue-simple-suggest": "^1.11.1",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "vue2-editor": "^2.10.3"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.2.1",
